--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ hr{
 @media (max-width: 767px) {
     .fullscreen-bg {
         background: url('../video/Trees-Top.jpg') center center / cover no-repeat;
-        height: 5%;
+        height: 1080px;
     }
  
     .fullscreen-bg__video {
