--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ hr{
     overflow: hidden;
     z-index: -100;
     position: relative;
-    height: 9.5%;
+    height: 9%;
     width: 100%;
     padding-top:50%;
     box-shadow: 0 0 15px;
@@ -177,13 +177,23 @@ hr{
 @media (max-width: 767px) {
     .fullscreen-bg {
         background: url('../video/Trees-Top.jpg') center center / cover no-repeat;
-        height: 2%;
     }
+    
+    
  
     .fullscreen-bg__video {
         display: none;
     }
 }
+
+@media (max-width: 1950px) {
+    .fullscreen-bg {
+     height: 65px;
+    }
+    
+}
+ 
+
 
 .podv{
     width: 100%;
@@ -225,4 +235,8 @@ footer, #page-wrap:after{
 #page-wrap{
     min-height: 94%;
     margin-bottom: -20px;
+}
+
+.map{
+    padding-left: 20%;
 }
