--- a/css/style.css
+++ b/css/style.css
@@ -258,6 +258,7 @@ svg{
     transition: opacity .5s ease;
     opacity: .6;
     cursor: pointer;
+    
 }
 
 .city{
@@ -271,3 +272,10 @@ svg{
     
 }
 
+@media (max-width: 1950px) {
+    .map {
+     width: 100%;
+    height: 100%;
+    }
+    
+}
