--- a/css/style.css
+++ b/css/style.css
@@ -272,15 +272,9 @@ svg{
     
 }
 
-@media (max-width: 767px) {
-    .map {
-     width: 100%;
-    height: 100%;
-    }
-    
-    .svg{
-        width: 100%;
-    height: 100%; 
+@media (max-width: 843px) {
+    .map img{
+        width:  100%;
     }
     
 }
