--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,7 @@ hr{
     width: 100%;
 }
  
-.overlay {
+.overlay1 {
     background: rgba(0,0,0,0.6);
     position: absolute;
     top:0;
@@ -155,7 +155,7 @@ hr{
     z-index: 4;
 }
  
-.overlay h1 {
+.overlay1 h1 {
     text-align:center;
     color:#fff;
     font-size: 70px;
@@ -164,7 +164,7 @@ hr{
 }
 
 @media (max-width: 767px) {
-    .overlay h1{
+    .overlay1 h1{
         text-align:center;
     color:#fff;
     font-size: 40px;
@@ -273,9 +273,161 @@ svg{
 }
 
 
-@media (max-width: 767px) {
+@media (max-width: 760px) {
     .part {
      opacity: .3;
     }
     
+}
+
+main{
+    width: 100%;
+    height: 500px;
+}
+
+.overlay {
+  visibility: hidden;
+  overflow: auto;
+  
+  position: fixed;
+  top: 100px;     left: 0;
+  bottom: 0;  right: 0;
+  
+  background: #fff;
+}
+
+.overlay.-active {
+  visibility: visible;
+}
+
+.overlay[data-animation="in"] {  
+  animation: overlay-in 0.5s ease 1;
+}
+
+.overlay[data-animation="out"] {  
+  animation: overlay-out 0.5s ease 1;
+}
+
+@keyframes overlay-in {
+  
+  0% {
+    visibility: hidden;
+    opacity: 0;    
+    transform: translateX(100%);
+  }
+  
+  100% {
+    visibility: visible;
+    opacity: 1;    
+    transform: translateX(0);
+  }
+  
+}
+
+@keyframes overlay-out {
+  
+  0% {
+    visibility: visible;
+    opacity: 1;    
+    transform: translateX(0);
+  }
+  
+  100% {
+    visibility: hidden;
+    opacity: 0;    
+    transform: translateX(-100%);
+  }
+  
+}
+
+.overlay--body {
+  max-width: 500px;
+  
+  margin: auto;
+  padding: 300px 100px;
+}
+
+/* Обратная связь */ 
+
+.block{
+    width: 30%;
+    float: left;
+    margin-left: 35%;
+    margin-right: 35%;
+    box-shadow: 0 0 20px;
+    border-radius: 20px;
+}
+
+#leftCol input{
+    float: left;
+    width: 40%;
+    margin-left: 30%;
+    border-radius: 10px;
+    border: 2px solid silver;
+    padding: 5px;
+    color: green;
+    font-size: 1.4em;
+    margin-bottom: 10px;
+}
+
+#leftCol input:focus{
+    border: 2px solid green;
+}
+h2{
+    margin-top: 50px;
+    text-align: center;
+    margin-bottom: 20px;
+    color: #FFFF00;
+    font-family: Comic Sans MS, sans-serif;
+    font-size: 2.3em;
+    text-shadow: green 1px 1px 0, green -1px -1px 0, 
+                 green -1px 1px 0, green 1px -1px 0;
+}
+#leftCol input:hover{
+    border: 2px solid green;
+}
+
+#leftCol button:hover{
+    cursor: pointer;
+}
+
+#leftCol input[type=button]{
+    float: left;
+    margin-bottom: 50px;
+    color: white;
+    background: #00CED1;
+}
+
+#leftCol input[type=button]:hover{
+    opacity: .3;
+    cursor: pointer;
+}
+
+#leftCol #message{
+    float: left;
+   width: 60%;
+    margin-left: 20%;
+    height: 100px;
+    border-radius: 10px;
+    border: 2px solid silver;
+    padding: 5px;
+    color: green;
+    font-size: 1.3em;
+    padding-bottom: 50px;
+    margin-bottom: 30px;
+    resize: none;
+}
+
+
+
+#leftCol #message:hover, #leftCol #message:focus{
+   border: 2px solid green; 
+}
+
+.block #leftCol #messageShow{
+    font-size: 1.2em;
+    float: left;
+    color: red;
+    width: 100%;
+    text-align: center;
 }
